# biomeneco

./: .gitignore  Dockerfile  ExampleSubmissionParameters.JSON  LICENSE  MenecoRunner.py  README.md  pyproject.toml  requirements.txt  service_main.py  setup.cfg  setup.py
.github/workflows/: ci.yml
examples/: kegg_api.py  meneco_only.py  meneco_with_pathways.py  random_knockout.py  run_bioiso_and_meneco.py
examples/data/: temp_seeds.xml  temp_targets.xml
examples/data/6gaps/: 6gaps_targets.xml  toy_seeds.xml  toy_targets.xml  universal_model_kegg_temp.xml
examples/data/models/: 6gaps_model.xml
examples/data/toy/: model_toy_network.xml  toy_seeds.xml  toy_targets.xml
src/gap_filling_dl/: MenecoRunner.py  __init__.py  kegg_api.py  my_classes.py  utils.py
src/gap_filling_dl/biomeneco/: gapfiller.py  generate_targets.py  model.py  utils.py
src/gap_filling_dl/write_sbml/: __init__.py  metabolites_to_sbml.py
tests/data/: model_synechocystis.xml  new_toy_test.xml  related_pathways_map.json
tests/data/6gaps/: 6gaps_model.xml  6gaps_seeds.xml  6gaps_targets.xml
tests/data/draft_synechocystis/: draft_synechocystis_seeds.xml  model_synechocystis.xml  (+1 more)
tests/meneco_outputs/: all_models_results.txt
tests/performance_tests/: 6_gaps_test.ipynb  benchmark_tests.py  clone_compartments.py  cobra_gapfill.py  meneco.ipynb  meneco_gapfill.py  meneco_syn.py  minmal_completion_example.ipynb  synechocystis.ipynb  testing_classes.ipynb
tests/unit_tests/: test_mini.py
utilities/: cofactors.json  cplex_response.txt
workers/: COBRAmodel.py  FilesUtilities.py  worker.py
(+61 files in other folders)
