[metadata]
name = GapFillingDL
version = 0.0.0
description = GapFillingDL
long_description = file: README.md
keywords = gap filling, deep learning
author = José Moura, Emanuel Cunha and Joao Capela
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.9
zip_safe = False
include_package_data = True
install_requires =
    cobra~=0.26.0
    pandas~=1.5.2
    docplex~=2.24.232
    clyngor-with-clingo
    meneco

dependency_links=[
        'git+https://github.com/BioSystemsUM/BioISO.git'
    ]

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
plants_sm = py.typed

[flake8]
max-line-length = 160